<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="numbers_of_likes">Likes</string>
    <string name="shared_numbers">Shared</string>
    <string name="numbers_of_views">Views</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="content_hint">Tape text</string>
    <string name="edition_message">Edit Message</string>
    <string name="author">Author</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="Cancel">Cancel editing</string>
    <string name="video">Freeze frame</string>
    <string name="name_of_video">Name of video</string>
    <string name="chooser_play_video">Play video in:</string>
    <string name="video_link_hint">Paste link to the video on YouTube</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="server_error">Server has not sent response. Try again</string>
    <string name="retry_loading_server" >Try again</string>
    <string name="menu_save">Save</string>
    <string name="description_photo">Photo description</string>
    <string name="remove">Remove photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
</resources>