<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.NewPostFragment">

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/content_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingBottom="100dp"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/large_spacing"
        android:layout_marginBottom="@dimen/large_spacing"
        android:contentDescription="@string/description_post_save"
        app:srcCompat="@drawable/ic_ok_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelEdition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/large_spacing"
        android:layout_marginBottom="@dimen/large_spacing"
        android:contentDescription="@string/Cancel"
        app:backgroundTint="#E91E63"
        app:srcCompat="@drawable/ic_close_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>