<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            android:src="@drawable/ic_netology_48dp"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButton" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, published, menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="@dimen/common_spacing"
            android:paddingBottom="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:text="@sample/posts.json/data/content" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/numbers_of_likes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            app:icon="@drawable/ic_like_24dp"
            tools:checked="@sample/posts.json/data/likes"
            tools:text="@sample/posts.json/data/likes"
            style="@style/Widget.AppTheme.LikeButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/shared_numbers"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintTop_toBottomOf="@id/footer"
            app:icon="@drawable/ic_share_24"
            tools:text="@sample/posts.json/data/shared"
            style="@style/Widget.AppTheme.IconButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/numbers_of_views"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            app:icon="@drawable/ic_view_24"
            tools:text="@sample/posts.json/data/views"
            style="@style/Widget.AppTheme.IconButton"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/videoGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/screenShot"
            app:layout_constraintEnd_toEndOf="@id/screenShot"
            app:layout_constraintTop_toTopOf="@id/screenShot"
            app:layout_constraintBottom_toBottomOf="@id/screenShot"
            app:constraint_referenced_ids="screenShot,onPlayButton,videoName" />

        <ImageView
            android:id="@+id/screenShot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/video"
            android:src="@drawable/ic_banner_foreground"
            app:layout_constraintBottom_toBottomOf="@id/footer"
            app:layout_constraintTop_toBottomOf="@+id/content"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true" />

        <TextView
            android:id="@+id/videoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintTop_toBottomOf="@+id/screenShot"
            app:layout_constraintStart_toStartOf="@id/screenShot"
            android:contentDescription="@string/name_of_video"
            tools:text="@sample/posts.json/data/videoName"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/screenShot"
            app:layout_constraintEnd_toEndOf="@id/screenShot"
            app:layout_constraintTop_toTopOf="@id/screenShot"
            app:layout_constraintBottom_toBottomOf="@id/screenShot"
            app:icon="@drawable/ic_play_circle_filled_24"
            tools:text="@sample/posts.json/data/views"
            style="@style/Widget.AppTheme.IconButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>